# physics_simulator

./: .gitignore  CMakeLists.txt  README.md
data/: smile.txt
include/: Ball.hpp  Point.hpp  Velocity.hpp  World.hpp
src/: Ball.cpp  World.cpp  main.cpp
